# pixyl

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
assets/: playground.mov
examples/: test.afs  test.pxsf  test.py  test2.afs
src/pixyl/: __main__.py  cli.py  constants.py  data.py  engine.py  maker.py  pixyl.py  playground.py  runner.py  utils.py
