[project]
name = "pixyl"
authors = [{ name = "Qexat" }]
description = "Pixyl is a terminal-based frame render engine."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.scripts]
pixyl = "pixyl:cli.main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
