[project]
name = "pixyl"
description = "Pixyl is a terminal-based frame render engine."
version = "0.2.0"

authors = [{ name = "Qexat", email = "contact@qexat.com" }]
maintainers = [{ name = "Qexat", email = "contact@qexat.com" }]

readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.11"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy==1.25.2", "result==0.13.1", "coquille==1.2.1"]

[project.scripts]
pixyl = "pixyl:__main__.main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
